# sigmavault

./: .dockerignore  .gitignore  03-SIGMAVAULT-INTERFACE-CONTRACTS.md  AUTONOMOUS_NEXT_STEPS_ACTION_PLAN.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_BRIEF_2026.md  EXHAUSTIVE_PROJECT_ANALYSIS_2026.md  FUSE_WINDOWS_NOTE.md  INSTALLATION_QUICK_REFERENCE.md  MASTER_ACTION_PLAN.md  PHASE6_BENCHMARK_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHASE6_MIGRATION_GUIDE.md  PHASE_0_VERIFICATION_REPORT.md  PHASE_3A_COMPLETION_REPORT.md  PHASE_3A_FINAL_REPORT.txt  PHASE_3A_SUMMARY.md  PHASE_5_COMPLETE_FINAL_SUMMARY.md  PHASE_5_DAY_1_COMPLETE.md  PHASE_5_DAY_4_PROGRESS.md  PHASE_5_DAY_5_EXECUTION_START.md  PHASE_5_DAY_5_PROGRESS.md  PHASE_5_EXECUTION_COMPLETE.md  PHASE_5_EXECUTION_START.md  PHASE_5_FINAL_SIGN_OFF.md  PHASE_5_FULL_TEST_RESULTS.md  PHASE_5_STATUS_LIVE.md  PHASE_6_DAY_1_PROGRESS.md  PHASE_6_KICKOFF_BRIEFING.md  PORT_ASSIGNMENTS.md  PROJECT_ANALYSIS_INDEX.md  PROJECT_STATUS_QUICK_REFERENCE.md  README.md  RESTRUCTURE_COMPLETION_REPORT.md  RESTRUCTURE_FINAL_REPORT.md  REVIEW_AND_ANALYSIS_SUMMARY.md  STATUS_CURRENT.md  STEP_3_5_INTEGRATION_TESTING_REPORT.md  (+9 more)
sigmavault/: .gitignore  CODE_REVIEW_FRAMEWORK.md  CONTRIBUTING.md  LICENSE  PHASE_1_EXECUTIVE_SUMMARY.md  PHASE_2_KICKOFF.md  README.md  SECURITY.md  __init__.py  cli.py  pyproject.toml
sigmavault/.benchmarks/: benchmark_filesystem.py
sigmavault/.github/: BENCHMARKING_INFRASTRUCTURE.md  MASTER_CLASS_ACTION_PLAN.md  MASTER_CLASS_ACTION_PLAN_EXECUTIVE_SUMMARY.md  PHASE_1_COMPLETION_SUMMARY.md  (+1 more)
(+446 files in other folders)
