[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmavault"
version = "1.0.0"
description = "Trans-dimensional encrypted storage - data scattered across N-dimensional manifold"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ΣVAULT Project"}
]
keywords = ["encryption", "filesystem", "fuse", "security", "dimensional", "scatter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Filesystems",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
fuse = [
    "fusepy>=3.0.1",
]
full = [
    "fusepy>=3.0.1",
    "argon2-cffi>=21.0.0",
    "psutil>=5.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sigmavault = "sigmavault.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigmavault*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
